ADR-2193 Fix horizontal scrolling causing blank space to the right on mobile (#416)
* ADR-2193 Use 'display: none' for visually hidden text of table action links

* ADR-2193 CSS for gov-uk-visually-hidden before and after

* ADR-2193 Use max-width: 0 for span.govuk-visually-hidden

* ADR-2193 Use fullWidth = true for DutyCalculationView (with duty due table)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 .js-visible {
   display: none !important;
 }
+
 .js-enabled .js-visible {
   display: inline-block !important;
 }
@@ -10,8 +11,8 @@
 }
 
 .text-align-right {
-    text-align: right;
-    white-space: nowrap;
+  text-align: right;
+  white-space: nowrap;
 }
 
 .text-align-right-wrap {
@@ -29,11 +30,15 @@
 }
 
 .govuk-form-group {
-    .govuk-fieldset {
-        .govuk-fieldset__legend {
-            &.govuk-visually-hidden {
-                white-space: normal!important;
-            }
-        }
+  .govuk-fieldset {
+    .govuk-fieldset__legend {
+      &.govuk-visually-hidden {
+        white-space: normal !important;
+      }
     }
+  }
+}
+
+span.govuk-visually-hidden {
+  max-width: 0 !important;
 }
